<resources>
    <string name="app_name">Songzter</string>
    <string name="listen_next">Listen Next</string>
    <string name="your_music">Your Music</string>
    <string name="discover">Discover</string>
    <string name="search">Search</string>
    <string name="nowPlaying">Now Playing</string>
    <string name="searchResults">Search Results</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="playlists">Your playlists</string>
</resources>
