<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="works.agus.songzter.MainActivity">

    <TextView
        android:id="@+id/listen_next"
        style="@style/CategoryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listen_next"/>

    <!-- Probably best to figure out how to use GridView for this playlist cover view -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_height="180dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/playList1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_weight="1"
            android:src="@drawable/playlist1"/>
        <ImageView
            android:id="@+id/playList2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_weight="1"
            android:src="@drawable/playlist2"/>
    </LinearLayout>


    <View
        style="@style/Divider"/>
    <TextView
        android:id="@+id/your_music"
        style="@style/CategoryTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:text="@string/your_music"/>
    <View style="@style/Divider"/>
    <TextView
        android:id="@+id/discover"
        style="@style/CategoryTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:text="@string/discover"/>
    <View style="@style/Divider"/>
    <EditText
        android:id="@+id/search"
        style="@style/CategoryTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:text="@string/search"
        android:inputType="text"/>
    <View style="@style/Divider"/>



</LinearLayout>
