<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="works.agus.songzter.YourMusic">

    <TextView
        android:id="@+id/your_music"
        style="@style/CategoryTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:text="@string/artists"/>
    <View style="@style/Divider"/>
    <TextView
        android:id="@+id/discover"
        style="@style/CategoryTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:text="@string/albums"/>
    <View style="@style/Divider"/>
    <TextView
        android:id="@+id/discover"
        style="@style/CategoryTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:text="@string/playlists"/>
    <View style="@style/Divider"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:textSize="18sp"
        android:text="Other things I need to learn:"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="- Use SQLite to locally store and retrieve my artists, albums, playlists etc"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="- Call  getReadableDatabase() to find the DB and perform SQL queries based on which category above the users clicks on"/>



</LinearLayout>
